cif/org.eclipse.escet.cif.tests/tests/cif2plc/non_static_eval_init_pred.cif.iec.err
ERROR: PLC code generation failed for CIF file "cif2plc/non_static_eval_init_pred.cif".
CAUSE: CIF PLC code generator failed due to unsatisfied preconditions:

  ----------------------------------------------------------------------------------------
  (1/2) Discrete variable has multiple potential initial values (any value in its domain).
  ----------------------------------------------------------------------------------------
   * In automaton "p":
     - disc int x in any;
                ^

  --------------------------------------------------------------------------------------------------------------------------------------------
  (2/2) Failed to determine whether a location is an initial location, as one of its initialization predicates cannot be statically evaluated.
  --------------------------------------------------------------------------------------------------------------------------------------------
   * In automaton "p":
     - initial x > 0;
                 ^
